--- a/main.html
+++ b/main.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<head>  
-    <title>This is a title</title>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>FIrst Page</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <p>This is a paragraph</p>
 
 </body>
 </html>
