--- a/index.html
+++ b/index.html
@@ -12,61 +12,52 @@
   
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">My Website</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="/HTML/home.html">Home</a>
-        </li>
-        
-        <li class="nav-item">
-          <a class="nav-link" href="HTML/syllabus.html">Syllabus</a>
-          <li class="nav-item dropdown"></li>
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Extra Resources</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Section - A</a></li>
-              <li><a class="dropdown-item" href="#">Section - B</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Separated link</a></li>
-            </ul>
+  <nav class="navbar navbar-expand-lg bg-light rounded" aria-label="Thirteenth navbar example">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample11" aria-controls="navbarsExample11" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse d-lg-flex" id="navbarsExample11">
+        <a class="navbar-brand col-lg-3 me-0" href="/HTML/home.html"><img src="/images/logo.png" width="180" height="100" class="d-inline-block align-top" alt="Logo"></a>
+        <ul class="navbar-nav col-lg-6 justify-content-lg-center">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#">Syllabus</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Resources</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link">Contact Us</a>
+          </li>
+        </ul>
+        <!-- <ul>
+        <li class="d-lg-flex col-lg-3 justify-content-lg-end">
+          <button class="btn btn-primary">Sign in</button>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="HTML/Resources.html">Resources</a>
+        <li class="d-lg-flex col-lg-3 justify-content-lg-end">
+          <button class="btn btn-primary">Login</button>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="HTML/contacs.html">Contact</a>
-        </li>
+      </ul> -->
+      </div>
+    </div>
+  </nav>  
+
+  <div class="container">
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="/HTML/home.html" class="nav-link px-2 text-muted">Home</a></li>
+        <li class="nav-item"><a href="/HTML/syllabus.html" class="nav-link px-2 text-muted">Syllabus</a></li>
+        <li class="nav-item"><a href="/HTML/Resources.html" class="nav-link px-2 text-muted">Resources</a></li>
+        <li class="nav-item"><a href="/HTML/contacs.html" class="nav-link px-2 text-muted">Contact Us</a></li>
       </ul>
-    </div>
-  </nav>
-  <!-- main page starts from here -->
-  <div class="container-fluid p-5 bg-primary text-white text-center">
-    <h1>Welcome to CDAC preperation Website</h1>
+      <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
+    </footer>
   </div>
-    
-  <div class="container mt-5">
-    <div class="row">
-      <div class="col-sm-4">
-        <h3>Section - A</h3>
-      </div>
-      <div class="col-sm-4">
-        <h3>Section - B</h3>
-      </div>
-      <div class="col-sm-4">
-        <h3>Section - C</h3>        
-      </div>
-    </div>
-  </div>
-  
-  <!-- Include Bootstrap JS and jQuery -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
+
