--- a/PAGES/Home/home.html
+++ b/PAGES/Home/home.html
@@ -14,50 +14,33 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-light rounded" aria-label="Thirteenth navbar example">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample11" aria-controls="navbarsExample11" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse d-lg-flex" id="navbarsExample11">
-            <a class="navbar-brand col-lg-3 me-0" href="/PAGES/Home/home.html"><img src="/images/logo.png" width="180" height="100" class="d-inline-block align-top" alt="Logo"></a>
-            <ul class="navbar-nav col-lg-6 justify-content-lg-center">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/PAGES/Home/home.html">Home</a>
-              </li>
-              <li class="nav-item">
-                
-                <a class="nav-link" aria-current="page" href="/PAGES/syllabus/syllabus.html">Syllabus</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/PAGES/resources/Resources.html">Resources</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/PAGES/contacs.html">Contact Us</a>
-              </li>
-            </ul>
-          </div>
-          <div> <a class="btn btn-sm btn-outline-secondary m-1" href="">Sign up</a></div>
-          <div> <a class="btn btn-sm btn-outline-secondary mx-2" href="/PAGES/sign-in/index.html">Log in</a></div>
-          </div>
-        </div>
-      </nav>
-      <div class="container-xl text-center">
-        <h1>Welcome To path to CDAC Preperation</h1>
-        <p>Here you will get most of the Resources for Preperation For CDAC entrace (CCAT)</p> 
+    <!-- main page starts from here -->
+  <div class="container-fluid p-5 bg-primary text-white text-center">
+    <h1>Welcome to CDAC preperation Website</h1>
+  </div>
+  <nav class="navbar navbar-expand-lg bg-light rounded" aria-label="Thirteenth navbar example">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample11" aria-controls="navbarsExample11" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse d-lg-flex" id="navbarsExample11">
+        <a class="navbar-brand col-lg-3 me-0" href="/PAGES/Home/home.html"><img src="/images/logo.png" width="180" height="100" class="d-inline-block align-top" alt="Logo"></a>
+        <ul class="navbar-nav col-lg-6 justify-content-lg-center">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/PAGES/Home/home.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/PAGES/Syllabus/syllabus.html">Syllabus</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/PAGES/Resources/Resources.html">Resources</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/PAGES/contacs.html">Contact Us</a>
+          </li>
+        </ul>
       </div>
-
-      <div class="container">
-        <footer class="py-3 my-4">
-          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="/HTML/home.html" class="nav-link px-2 text-muted">Home</a></li>
-            <li class="nav-item"><a href="/HTML/syllabus.html" class="nav-link px-2 text-muted">Syllabus</a></li>
-            <li class="nav-item"><a href="/HTML/Resources.html" class="nav-link px-2 text-muted">Resources</a></li>
-            <li class="nav-item"><a href="/HTML/contacs.html" class="nav-link px-2 text-muted">Contact Us</a></li>
-          </ul>
-          <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
-        </footer>
-      </div>
-      
+    </div>
+  </nav>  
 </body>
 </html>
