--- a/PAGES/Resources/Resources.html
+++ b/PAGES/Resources/Resources.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Navigation Bar</title>
-  <!-- Include Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resources</title>
+    <link rel="stylesheet" href="/CSS/Resources.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-light rounded" aria-label="Thirteenth navbar example">
@@ -36,20 +32,6 @@
       </div>
     </div>
   </nav>  
-
-  <div class="container">
-    <footer class="py-3 my-4">
-      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="/HTML/home.html" class="nav-link px-2 text-muted">Home</a></li>
-        <li class="nav-item"><a href="/HTML/syllabus.html" class="nav-link px-2 text-muted">Syllabus</a></li>
-        <li class="nav-item"><a href="/HTML/Resources.html" class="nav-link px-2 text-muted">Resources</a></li>
-        <li class="nav-item"><a href="/HTML/contacs.html" class="nav-link px-2 text-muted">Contact Us</a></li>
-      </ul>
-      <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
-    </footer>
-  </div>
+    
 </body>
 </html>
-
-
-
